--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ CLOUDINARY_URL=cloudinary://788741842354481:AEL7CdIuPkurSavxnbAcwNkw-Ms@dvticeiq
 GOOGLE_CLIENT_ID=1026192954945-ceo27s3i59895u8bpvkktj959mumjgf2.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET='kdlnvklnoddffwrbbrsge'
-NEXTAUTH_URL='http://localhost:3000'
+NEXTAUTH_URL='https://pixelsplace.vercel.app'
